# Slither-Sprint

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: GAME.py  constants.py  game_logic.py  home_screen.py  main.py
src/slither_sprint/: SlitherSprintGame.spec  settings.py
src/slither_sprint/controller/: game_controller.py
src/slither_sprint/model/: game_mode.py  game_state.py  snake.py
src/slither_sprint/view/: renderer.py
tests/: test_apple.py  test_game_mode.py  test_game_state.py  test_obstacles.py  test_pane.py  test_renderer.py  test_scoring.py  test_snake.py
