[project]
name = "slither-sprint"
version = "0.1.0"
description = "Two player snake game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
    "pyinstaller>=6.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "src/slither_sprint",
]

[project.scripts]
slither-sprint = "slither_sprint.game:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
